--- a/client/style.css
+++ b/client/style.css
@@ -1,19 +1,3 @@
-table {
-    font-family: arial, sans-serif;
-    border-collapse: collapse;
-    width: 100%;
-  }
-  
-td, th {
-    border: 1px solid #dddddd;
-    text-align: left;
-    padding: 8px;
-}
-
-tr:nth-child(even) {
-    background-color: #dddddd; 
-}
-
 #dynamicElements{
     position: absolute;
 
@@ -24,25 +8,65 @@ tr:nth-child(even) {
     top: 20%;
 }
 
-#dynamicElements div{
-    height: 100%;
-}
-
 #categories {
+    position: absolute;
     width: 100%;
+    height: 5%;
 }
 .category{
+    display: inline;
+    margin: auto;
+}
 
-display: inline;
-margin: auto;
+#tableContainer {
+    position: absolute;
+    width: 100%;
+    height: 90%;
+    top: 5%;
 
+    overflow-y: auto;
 }
 
 table {
-position: relative;
-height: 100%;
+    font-family: arial, sans-serif;
+
+    table-layout: fixed;
+    border-collapse: separate;
+    border-spacing: 0;
+
+    width: 100%;
 }
 
-tbody{
-    overflow-y: auto;
+thead tr {
+    width: 100%;
+}
+
+thead th{
+    position: sticky;
+    width: 20%;
+    top: 0;
+    padding: 8px;
+    text-align: left;
+
+    color: white;
+    border: 1px solid #797979;
+    background-color: #8b8b8b; 
+
+}
+
+td {
+    border: 1px solid #cacaca;
+    text-align: left;
+    padding: 8px;
+}
+
+tr:nth-child(even) {
+    background-color: #dddddd; 
+}
+
+#copyButton {
+    position: absolute;
+    top: 95%;
+    width: 100%;
+    height: 5%;
 }
