--- a/client/style.css
+++ b/client/style.css
@@ -1,28 +1,50 @@
 #dynamicElements{
     position: absolute;
 
-    width: 70%;
+    width: 50%;
     height: 60%;
 
-    left: 15%;
+    left: 25%;
     top: 20%;
+
+    background-color: #4b4b4b; 
 }
 
 #categories {
     position: absolute;
     width: 100%;
     height: 5%;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
 .category{
-    display: inline;
-    margin: auto;
+    background-color: #3b3b3b; 
+    color: white;
+    font-weight: bold;
+
+    border: none;
+
+    flex-basis: 0;
+    flex-grow: 1;
+}
+
+.selectedCategory{
+    background-color: #4b4b4b; 
+    border: 1px solid black;
+    border-bottom: none;
+    outline: none;
+
+    text-decoration: underline;
 }
 
 #tableContainer {
     position: absolute;
-    width: 100%;
-    height: 90%;
-    top: 5%;
+    width: 95%;
+    height: 85%;
+    top: 7.5%;
+    left: 2.5%;
 
     overflow-y: auto;
 }
@@ -51,7 +73,6 @@ thead th{
     color: white;
     border: 1px solid #797979;
     background-color: #8b8b8b; 
-
 }
 
 td {
@@ -61,7 +82,11 @@ td {
 }
 
 tr:nth-child(even) {
-    background-color: #dddddd; 
+    background-color: #c7c7c7; 
+}
+
+tr:nth-child(odd) {
+    background-color: #ebebeb; 
 }
 
 #copyButton {
