--- a/client/style.css
+++ b/client/style.css
@@ -1,21 +1,21 @@
-#dynamicElements{
+#dynamicElements {
     position: absolute;
 
-    width: 50%;
+    width: 70%;
     height: 60%;
 
     min-width: 375px;
 
-    left: 25%;
+    left: 15%;
     top: 20%;
 }
 
-#elementBody{
+#elementBody {
     position: absolute;
     width: 100%;
     height: 90%;
     top: 5%;
-    background-color: #4b4b4b; 
+    background-color: #4b4b4b;    
 }
 
 #categories {
@@ -31,7 +31,7 @@
     position: relative;
     top: 10%;
     background-color: #3b3b3b; 
-    color: white;
+    color: rgb(238, 238, 238);
     font-weight: bold;
     font-size: 1em;
 
@@ -42,25 +42,28 @@
     z-index: 1;
 
     box-shadow: inset 0px -3px 8px rgb(29, 29, 29);
-
 }
 .category:focus {
     outline: none;
 }
 .category:hover {
-    background-color: #4b4b4b; 
+    background-color: #4b4b4b;
+    color:white; 
 }
 .category:active {
     background-color: #2b2b2b; 
 }
 
 .selectedCategory{
+    height: 110%;
     top: 0%;
     background-color: #4b4b4b; 
+    color: white;
+
     border-bottom: none;
     border-left: none;
     border-right: none;
-    outline: none;
+
     text-decoration: underline;
     border-radius: 5px 5px 0px 0px;
     box-shadow: 2px 0px rgb(19, 19, 19);;
@@ -73,17 +76,18 @@
     background-color: #4b4b4b; 
 }
 
-
 #tableContainer {
     position: absolute;
-    width: 97%;
-    height: 95%;
-    top: 2.5%;
-    left: 1.5%;
+    width: 90%;
+    height: 90%;
+    top: 5%;
+    left: 5%;
+
+    box-shadow:  0px 0px 15px 10px rgb(59, 59, 59);
+
 
     overflow-y: auto;
 }
-
 table {
     font-family: arial, sans-serif;
 
@@ -97,7 +101,6 @@ table {
 thead tr {
     width: 100%;
 }
-
 thead th{
     position: sticky;
     width: 20%;
@@ -106,12 +109,15 @@ thead th{
     text-align: left;
 
     color: white;
-    border: 1px solid #797979;
-    background-color: #8b8b8b; 
+
+    border: 1px solid #9c9c9c;
+    background-color: #666666;  /*8b8b8b*/
+    box-shadow:  0px 1px 3px 0px rgb(75, 69, 90);
+
 }
 
 td {
-    border: 1px solid #b8b8b8;
+    border: 1px solid #9c9c9c;
     text-align: left;
     padding: 8px;
 }
@@ -119,7 +125,6 @@ td {
 tr:nth-child(even) {
     background-color: #c7c7c7; 
 }
-
 tr:nth-child(odd) {
     background-color: #ebebeb; 
 }
