--- a/client/style.css
+++ b/client/style.css
@@ -1,21 +1,38 @@
+body {
+    background-color: rgb(110, 110, 110);
+}
+
+#input {
+    position: absolute;
+    width: 90%;
+    height: 5%;
+    top: 5%;
+    left: 5%;
+
+
+}
+
+
 #dynamicElements {
     position: absolute;
 
-    width: 70%;
-    height: 60%;
+    width: 90%;
+    height: 80%;
 
     min-width: 375px;
 
-    left: 15%;
-    top: 20%;
+    left: 5%;
+    top: 12.5%;
 }
 
 #elementBody {
     position: absolute;
     width: 100%;
-    height: 90%;
+    height: 88%;
     top: 5%;
-    background-color: #4b4b4b;    
+    background-color: #4b4b4b;
+    border: 1px solid rgb(22, 22, 22);
+    box-sizing: border-box;
 }
 
 #categories {
@@ -69,8 +86,13 @@
     box-shadow: 2px 0px rgb(19, 19, 19);;
     z-index: 2;
 }
+.selectedCategory:first-of-type{
+    border-left: 1px solid rgb(22, 22, 22);
+    
+}
 .selectedCategory:last-of-type{
     box-shadow: -2px 0px rgb(19, 19, 19);
+    border-right: 1px solid rgb(22, 22, 22);
 }
 .selectedCategory:active {
     background-color: #4b4b4b; 
@@ -84,8 +106,6 @@
     left: 5%;
 
     box-shadow:  0px 0px 15px 10px rgb(59, 59, 59);
-
-
     overflow-y: auto;
 }
 table {
@@ -111,9 +131,8 @@ thead th{
     color: white;
 
     border: 1px solid #9c9c9c;
-    background-color: #666666;  /*8b8b8b*/
-    box-shadow:  0px 1px 3px 0px rgb(75, 69, 90);
-
+    background-color: #646464;  /*8b8b8b*/
+    box-shadow:  0px 1px 3px 0px rgb(88, 88, 88);
 }
 
 td {
@@ -123,7 +142,7 @@ td {
 }
 
 tr:nth-child(even) {
-    background-color: #c7c7c7; 
+    background-color: #cbc6cc; /*c7c7c7*/
 }
 tr:nth-child(odd) {
     background-color: #ebebeb; 
@@ -131,7 +150,26 @@ tr:nth-child(odd) {
 
 #copyButton {
     position: absolute;
-    top: 95%;
+    top: 93%;
     width: 100%;
-    height: 5%;
+    height: 7%;
+
+    border: 1px solid rgb(22, 22, 22);
+    border-top: 0;
+    border-radius: 0px 0px 20px 20px;
+
+    color: white;
+    background-image: linear-gradient(rgb(37,37,37), rgb(20, 20, 20));
+
+    font-weight: bold;
+    font-size: 1em;
+}
+#copyButton:hover {
+    background-image: linear-gradient(rgb(45,45,45), rgb(28, 28, 28));
+}
+#copyButton:focus {
+    outline: none;
+}
+#copyButton:active {
+    background-image: linear-gradient(rgb(25,25,25), rgb(13, 13, 13));
 }
