--- a/client/style.css
+++ b/client/style.css
@@ -94,6 +94,9 @@ body {
     box-shadow: -2px 0px rgb(19, 19, 19);
     border-right: 1px solid rgb(22, 22, 22);
 }
+.selectedCategory:only-of-type {
+    box-shadow: none;
+}
 .selectedCategory:active {
     background-color: #4b4b4b; 
 }
