--- a/client/style.css
+++ b/client/style.css
@@ -2,6 +2,12 @@ body {
     background-color: rgb(110, 110, 110);
 }
 
+h2 {
+    font-family: Arial, Helvetica, sans-serif;
+    color: black;
+    font-weight: bold;
+}
+
 #input {
     position: absolute;
     width: 90%;
