--- a/client/style.css
+++ b/client/style.css
@@ -20,7 +20,7 @@ h2 {
     left: 5%;
 
     min-height: 25px;
-    max-height: 70px;
+    max-height: 65px;
 
     min-width: 400px;
 }
@@ -71,7 +71,10 @@ h2 {
     position: absolute;
     width: 100%;
     height: 100%;
-    opacity: 0%;
+
+    opacity: 0.0;
+    -moz-opacity: 0.0;
+    filter: alpha(opacity=0);
 }
 
 #process {
